--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 
 		<!-- RASPBERRY PI PROPERTIES -->
 		<pi.host>partyraumpi</pi.host>
@@ -24,6 +24,15 @@
 		<pi.user>pi</pi.user>
 		<pi.password>pi</pi.password>
 		<pi.deployDirectory>/home/pi/programme/LichtSteuerung</pi.deployDirectory>
+
+		<sonar.organization>erdtmannf</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<!-- JaCoCo Properties -->
+		<jacoco.version>0.8.7</jacoco.version>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.language>java</sonar.language>
 
 	</properties>
 
@@ -42,7 +51,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.erdtmann.soft</groupId>
-			<artifactId>lichtUtils</artifactId>
+			<artifactId>utilsPackage</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
@@ -67,6 +76,36 @@
 
 	<build>
 		<plugins>
+		
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
