--- a/.settings/org.sonarlint.eclipse.core.prefs
+++ b/.settings/org.sonarlint.eclipse.core.prefs
@@ -1,6 +1,6 @@
 autoEnabled=true
 eclipse.preferences.version=1
 idePrefixKey=
-projectKey=ErdtmannF_piLedSteuerung
+projectKey=de.erdtmann.soft\:piLedSteuerung
 serverId=SonarCloud/erdtmannf
 sqPrefixKey=
